@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2004-2005 by Konstantin V. Arkhipov, Anton E. Lebedevich *
+ *   Copyright (C) 2004-2006 by Konstantin V. Arkhipov, Anton E. Lebedevich *
  *   voxus@onphp.org, noiselist@pochta.ru                                   *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
@@ -66,6 +66,11 @@
 		public static function file($name)
 		{
 			return new PrimitiveFile($name);
+		}
+		
+		public static function image($name)
+		{
+			return new PrimitiveImage($name);
 		}
 		
 		public static function email($name)
